<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_location"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FF4CAF50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nav_title"
                android:text="@string/nav_header"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/white"
                />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:translationY="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/journey_activity_title"
                android:text="@string/journey_activity_title"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio_failte_title"
                android:text="@string/radio_failte_title"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="#FF4CAF50"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:translationY="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio_failte_text"
                android:text="@string/radio_failte_text"
                android:translationY="20dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="249dp"
                android:gravity="center"
                android:src="@drawable/radio_failte"
                android:translationY="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mural_wall_title"
                android:text="@string/mural_wall_title"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="#FF4CAF50"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:translationY="55dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mural_wall_text"
                android:text="@string/mural_wall_text"
                android:translationY="55dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:gravity="center"
                android:src="@drawable/nhs_mural"
                android:translationY="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bobby_sands_title"
                android:text="@string/bobby_sands_title"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="#FF4CAF50"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:translationY="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bobby_sands_text"
                android:text="@string/bobby_sands_text"
                android:translationY="30dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:gravity="center"
                android:src="@drawable/bobby_sands_mural"
                android:translationY="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/clonard_title"
                android:text="@string/clonard_title"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="#FF4CAF50"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:translationY="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/clonard_text"
                android:text="@string/clonard_text"
                android:translationY="30dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:gravity="center"
                android:src="@drawable/clonard"
                android:translationY="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/connolly_title"
                android:text="@string/connolly_title"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="#FF4CAF50"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:translationY="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/connolly_text"
                android:text="@string/connolly_text"
                android:translationY="30dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:gravity="center"
                android:src="@drawable/connolly_centre"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/milltown_title"
                android:text="@string/milltown_title"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="#FF4CAF50"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:translationY="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/milltown_text"
                android:text="@string/milltown_text"
                android:translationY="0dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:gravity="center"
                android:src="@drawable/milltown"
                android:translationY="0dp"
                android:layout_marginBottom="80dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>